k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mymovies-hd
  labels:
    app: mymovies-hd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mymovies-hd
  template:
    metadata:
      labels:
        app: mymovies-hd
    spec:
      containers:
      - name: mymovies-hd
        image: node:20-alpine
        command: [ "/bin/sh", "-lc", "/app/start.sh" ]
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: app-data
          mountPath: /app
      volumes:
      - name: app-data
        emptyDir: {}
